[package]
name = "razplus-search"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.22", features = ["derive"] }
reqwest = "0.11.11"
scraper = "0.13.0"
tokio = { version = "1.21.1", features = ["full"] }
colored = "2.0.0"

[dev-dependencies]
assert_cmd = "2"
predicates = "2"
